# kdeedu-data

./: .kde-ci.yml  CMakeLists.txt
data/kvtml/: CMakeLists.txt  computers.kvtml  currencies.kvtml
data/kvtml/bg/: CMakeLists.txt  animals.kvtml  easy.kvtml  hard.kvtml  medium.kvtml
data/kvtml/ca/: CMakeLists.txt  animals_pri.kvtml  biografies_sec.kvtml  capitalsdelmón_sec.kvtml  comarques_sec.kvtml  divises_sec.kvtml  espai_pri.kvtml  esports_sec.kvtml  fruites_pri.kvtml  fàcils_pri.kvtml.txt  hard_pri.kvtml.txt  invents_sec.kvtml  medium_pri.kvtml.txt  objectes_pri.kvtml  ordinadors_pri.kvtml  professions_pri.kvtml  províncies_sec.kvtml  roba_pri.kvtml  transports_pri.kvtml  verdures_pri.kvtml  vestit_pri.kvtml
data/kvtml/cs/: CMakeLists.txt  animals.kvtml  easy.kvtml  hard.kvtml  medium.kvtml
data/kvtml/da/: CMakeLists.txt  beklaedning.kvtml  computere.kvtml  da_sports.kvtml  dyr.kvtml  easy.kvtml  frugter.kvtml  grontsager.kvtml  hard.kvtml  medium.kvtml  numre.kvtml  objekter.kvtml  opfindelser.kvtml  personer.kvtml  professioner.kvtml  rummet.kvtml  transport.kvtml  valutaer.kvtml  verdenshovedstaeder.kvtml
data/kvtml/de/: CMakeLists.txt  animals.kvtml  clothing.kvtml  computers.kvtml  currencies.kvtml  easy.kvtml  fruits.kvtml  hard.kvtml  inventions.kvtml  medium.kvtml  numbers.kvtml  objects.kvtml  people.kvtml  professions.kvtml  space.kvtml  sports.kvtml  transportation.kvtml  vegetables.kvtml  worldcapitals.kvtml
data/kvtml/el/: CMakeLists.txt  animals.kvtml  clothing.kvtml  computers.kvtml  currencies.kvtml  easy.kvtml  (+13 more)
icons/: CMakeLists.txt
(+303 files in other folders)
